TF-Compiladores/exemploSem.y
    
%{
  import java.io.*;
%}


%token IDENT, INT, DOUBLE, BOOL, NUM, STRING
%token LITERAL, AND, VOID, MAIN, IF
%token STRUCT, FUNC, RETURN


%nonassoc '>'
%left AND
%left '+'
%left '*'
%left '[' '.'        

%type <sval> IDENT
%type <ival> NUM
%type <obj> type    // obj --> TS_ENTRY
%type <obj> exp

%%

prog : { currClass = ClasseID.VarGlobal; } declList FUNC funcList 
     ;

declList : declList decl
        |                      
        ;

funcList : funcList func   
      |                      
      ;   


decl : type  { currentType = (TS_entry)$1; /*System.out.println((TS_entry)$1);*/ }  TArray Lid ';' 
      |declStruct 
     ;

declStruct : STRUCT IDENT  '{' listaCampos '}' ';'

listaCampos : listaCampos decl
            |
            ;


func : typeRet Fid '(' listaParam ')' '{'  listacmd retorno ';' '}'
     | main
     | IDENTNULL '('  ')' {System.out.println("Detectou");}
     ;


Fid : IDENT   { TS_entry nodo = ts.pesquisa($1);
                  if (nodo != null){ 
                              yyerror("(sem) Funcao >" + $1 + "< jah declarada");
                  }
                   else ts.insert(new TS_entry($1, currentType, currClass)); 
                       }
    ;

typeRet : type { currentType = (TS_entry)$1; System.out.println((TS_entry)$1); }
        | VOID 
        ;


listaParam : listaParam ',' param
           | param
           ;

param : type id 
      ;

retorno : RETURN IDENTNULL
        ;

IDENTNULL : IDENT { TS_entry nodo = ts.pesquisa($1);
                              if (nodo == null) 
                                          yyerror("(sem) variavel >" + $1 + "< nao declarada");
                          }
                          ;


TArray : '[' NUM ']' TArray 
        // { currentType = new TS_entry("?", Tp_ARRAY, currClass, $2, currentType); }
       |   
       ;     

Lid : Lid  ',' id 
    | id  
    ;

id : IDENT   { TS_entry nodo = ts.pesquisa($1);
                  if (nodo != null){ 
                              yyerror("(sem) variavel >" + $1 + "< jah declarada");
                  }
                   else ts.insert(new TS_entry($1, currentType, currClass)); 
                  }
    ;

              //
              // faria mais sentido reconhecer todos os tipos como ident! 
              // 

type : INT    { $$ = Tp_INT; }
     | DOUBLE { $$ = Tp_DOUBLE; }
     | BOOL   { $$ = Tp_BOOL; }   
     | IDENT  { $$ = null; } // verificar se está na table
                             // e é da classe NomeStruct
     ;




main :  VOID MAIN '(' ')' bloco ;

bloco : '{' listacmd '}';

listacmd : listacmd cmd
        |
        ;

cmd :  IDENT '=' exp ';' {   TS_entry nodo = ts.pesquisa($1);
                          if (nodo == null) {
                            yyerror("(sem) var <" + $1 + "> nao declarada"); 
                            //$$ = Tp_ERRO;  
                          }  
                          else   
                            validaTipo(ATRIB, nodo.getTipo(), (TS_entry)$3); 
                          }
      | IF  '(' exp ')'   {  if ( ((TS_entry)$3) != Tp_BOOL) 
                              yyerror("(sem) expressão (if) deve ser lógica "+((TS_entry)$3).getTipo());
                             }  
             cmd     
       ;

exp : exp '+' exp { $$ = validaTipo('+', (TS_entry)$1, (TS_entry)$3); }
    | exp '*' exp { $$ = validaTipo('*', (TS_entry)$1, (TS_entry)$3); }  
    | exp '>' exp { $$ = validaTipo('>', (TS_entry)$1, (TS_entry)$3); }
    | exp AND exp { $$ = validaTipo(AND, (TS_entry)$1, (TS_entry)$3); } 
    | NUM         { $$ = Tp_INT; }      
    | '(' exp ')' { $$ = $2; }
    | IDENT       { TS_entry nodo = ts.pesquisa($1);
                    if (nodo == null) {
                       yyerror("(sem) var <" + $1 + "> nao declarada"); 
                       $$ = Tp_ERRO;    
                       }           
                    else
                        $$ = nodo.getTipo();
                  }  
     | IDENT '(' ')' ';'     { $$=null;}
     | IDENT '(' listaExp ')' ';'  { $$ = null; }

     | exp '.' exp  { $$ = null; }
 
     | exp '[' exp ']'  {  if ((TS_entry)$3 != Tp_INT) 
                              yyerror("(sem) indexador não é numérico ");
                           else 
                               if (((TS_entry)$1).getTipo() != Tp_ARRAY)
                                  yyerror("(sem) elemento não indexado ");
                               else 
                                  $$ = ((TS_entry)$1).getTipoBase();
                         } 
    ;

listaExp : listaExp ',' exp
         | exp
         ;
%%

  private Yylex lexer;

  private TabSimb ts;

  public static TS_entry Tp_INT =  new TS_entry("int", null, ClasseID.TipoBase);
  public static TS_entry Tp_DOUBLE = new TS_entry("double", null,  ClasseID.TipoBase);
  public static TS_entry Tp_BOOL = new TS_entry("bool", null,  ClasseID.TipoBase);

  public static TS_entry Tp_ARRAY = new TS_entry("array", null,  ClasseID.TipoBase);

  public static TS_entry Tp_ERRO = new TS_entry("_erro_", null,  ClasseID.TipoBase);

  public static TS_entry Tp_VOID = new TS_entry("void", null,  ClasseID.TipoBase);

  public static final int ARRAY = 1500;
  public static final int ATRIB = 1600;

  private String currEscopo;

  private ClasseID currClass;

  private TS_entry currentType;

  private int yylex () {
    int yyl_return = -1;
    try {
      yylval = new ParserVal(0);
      yyl_return = lexer.yylex();
    }
    catch (IOException e) {
      System.err.println("IO error :"+e);
    }
    return yyl_return;
  }


  public void yyerror (String error) {
    //System.err.println("Erro (linha: "+ lexer.getLine() + ")\tMensagem: "+error);
    System.err.printf("Erro (linha: %2d) \tMensagem: %s\n", lexer.getLine(), error);
  }


  public Parser(Reader r) {
    lexer = new Yylex(r, this);

    ts = new TabSimb();

    //
    // não me parece que necessitem estar na TS
    // já que criei todas como public static...
    //
    ts.insert(Tp_ERRO);
    ts.insert(Tp_INT);
    ts.insert(Tp_DOUBLE);
    ts.insert(Tp_BOOL);
    ts.insert(Tp_ARRAY);
    ts.insert(Tp_VOID);
    

  }  

  public void setDebug(boolean debug) {
    yydebug = debug;
  }

  public void listarTS() { ts.listar();}

  public static void main(String args[]) throws IOException {
    System.out.println("\n\nVerificador semantico simples\n");
    

    Parser yyparser;
    if ( args.length > 0 ) {
      // parse a file
      yyparser = new Parser(new FileReader(args[0]));
    }
    else {
      // interactive mode
      System.out.println("[Quit with CTRL-D]");
      System.out.print("Programa de entrada:\n");
        yyparser = new Parser(new InputStreamReader(System.in));
    }

    yyparser.yyparse();

      yyparser.listarTS();

      System.out.print("\n\nFeito!\n");
    
  }


   TS_entry validaTipo(int operador, TS_entry A, TS_entry B) {
       
         switch ( operador ) {
              case ATRIB:
                    if ( (A == Tp_INT && B == Tp_INT)                        ||
                         ((A == Tp_DOUBLE && (B == Tp_INT || B == Tp_DOUBLE))) ||
                         (A == B) )
                         return A;
                     else
                         yyerror("(sem) tipos incomp. para atribuicao: "+ A.getTipoStr() + " = "+B.getTipoStr());
                    break;

              case '+' :
              case '*' :
                    if ( A == Tp_INT && B == Tp_INT)
                          return Tp_INT;
                    else if ( (A == Tp_DOUBLE && (B == Tp_INT || B == Tp_DOUBLE)) ||
                              (B == Tp_DOUBLE && (A == Tp_INT || A == Tp_DOUBLE)) ) 
                         return Tp_DOUBLE;     
                    else
                        yyerror("(sem) tipos incomp. para soma: "+ A.getTipoStr() + " + "+B.getTipoStr());
                    break;

             case '>' :
                     if ((A == Tp_INT || A == Tp_DOUBLE) && 
                         (B == Tp_INT || B == Tp_DOUBLE))
                         return Tp_BOOL;
                      else
                        yyerror("(sem) tipos incomp. para op relacional: "+ A.getTipoStr() + " > "+B.getTipoStr());
                      break;

             case AND:
                     if (A == Tp_BOOL && B == Tp_BOOL)
                         return Tp_BOOL;
                      else
                        yyerror("(sem) tipos incomp. para op lógica: "+ A.getTipoStr() + " && "+B.getTipoStr());
                 break;
            }

            return Tp_ERRO;
           
     }
